[package]
name = "ermod-template"
version = "0.1.0"
edition = "2021"

[lib]
name = "ermod"
crate-type = ["cdylib"]

[features]
Console = []

[dependencies]
# dll-proxy = { git = "https://github.com/Nordgaren/dll-proxy.git" }
modengine2-ext = { path = "../modengine2-rs", features = ["modengine_ext_init"] }
eldenring = { git = "https://github.com/vswarte/eldenring-rs.git" }
eldenring-util = { git = "https://github.com/vswarte/eldenring-rs.git" }
